# looloo-copilot

./: LICENSE  README.md
fastapi_hexagonal_boilerplate/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_hexagonal_boilerplate/.github/workflows/: ci.yml
fastapi_hexagonal_boilerplate/app/: main.py
fastapi_hexagonal_boilerplate/app/api/: routers.py  security.py
fastapi_hexagonal_boilerplate/app/api/endpoints/: dashboard.py  home.py
fastapi_hexagonal_boilerplate/app/core/models/: __init__.py  report.py  workplace.py
fastapi_hexagonal_boilerplate/app/core/ports/: __init__.py  cache_port.py  database_port.py  distributed_lock_port.py  example_port.py  report_port.py  workplace_port.py
fastapi_hexagonal_boilerplate/app/core/use_cases/: __init__.py  example_use_case.py  generate_dashboard_report_use_case.py
fastapi_hexagonal_boilerplate/app/infrastructure/adapters/: __init__.py  example_adapter.py  in_memory_adapter.py  mock_report_adapter.py  mock_workplace_adapter.py  mongodb_adapter.py  postgresql_adapter.py
fastapi_hexagonal_boilerplate/app/infrastructure/services/: __init__.py  example_service.py  memcached_cache_service.py  redis_cache_service.py  redis_distributed_lock_service.py
fastapi_hexagonal_boilerplate/tests/api/endpoints/: test_dashboard.py
fastapi_hexagonal_boilerplate/tests/infrastructure/adapters/: test_in_memory_adapter.py  test_mongodb_adapter.py  test_postgresql_adapter.py
fastapi_hexagonal_boilerplate/tests/infrastructure/services/: __init__.py  test_memcached_cache_service.py  test_redis_cache_service.py  test_redis_distributed_lock_service.py
