[tool.poetry]
name = "fastapi-hexagonal-boilerplate"
version = "0.1.0"
description = "A boilerplate project for FastAPI with Hexagonal Architecture."
authors = ["Your Name <you@example.com>"] # You can change this
readme = "README.md" # We will create this later
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
ruff = "^0.3.2" # Added ruff
    slowapi = "^0.1.9" # Added slowapi
    pybreaker = "^1.0.0" # Added pybreaker
    python-multipart = "^0.0.9" # Added for general FastAPI form/file handling
    python-dateutil = "^2.8.2"  # Added for robust date parsing if needed

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"  # Or latest stable
httpx = "^0.25.0" # For async HTTP client testing with FastAPI
# any other dev dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "S", "C4", "B", "A", "RUF"] # Common selections
ignore = []

[tool.ruff.format]
quote-style = "double"
